Step two. Match players.
