# app/Filament/Resources/Dictionary/GameFormats/Tables/GameFormatsTable.php
@@ -2,6 +2,8 @@
 
 namespace App\Filament\Resources\Dictionary\GameFormats\Tables;
 
+use App\Filament\Resources\Dictionary\GameFormats\GameFormatResource;
+use App\Models\Dictionary\Game\GameFormat;
 use Filament\Tables\Columns\TextColumn;
 use Filament\Tables\Table;
 
@@ -17,11 +19,14 @@ class GameFormatsTable
                 TextColumn::make('name')
                     ->label('Name')
                     ->sortable(),
+                TextColumn::make('number_of_players')
+                    ->label('Number of players')
+                    ->sortable(),
             ])
             ->filters([])
             ->searchable(false)
             ->paginated(false)
             ->defaultSort('id')
-            ->recordUrl(null);
+            ->recordUrl(fn (GameFormat $record): string => GameFormatResource::getUrl('edit', ['record' => $record]));
     }
 }
